# fluorescence-segmentation

./: .gitignore  Dockerfile  Dockerfile.mlflow  Dockerfile.streamlit  README.md  docker-compose.yaml  ends_id.txt  pyproject.toml
backend/: Dockerfile  main.py  model_arch.py  requirements.txt
config/: config.yml
dags/: test.py
dags/tasks/data_acquisition/: dataset_builder.py  downloader.py  hpa_parser.py  load_config.py
dags/tasks/segmentation/: mask_generation.py  preprocessing_images.py  segmentations.py
dags/tasks/train/: comb_train.py  loader.py  protein_train.py  train_model.py  transformations.py
dags/utils/: logger.py
frontpage/: Dockerfile  webpage.py
ml_train/: Dockerfile  comb_train.py  dataset_loader.py  metrics.py  protein_unet_model.py  requirements.txt  train_model.py
notebooks/: Train_icesi.ipynb
