[project]
name = "segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "albumentations>=2.0.8",
    "beautifulsoup4>=4.14.2",
    "imageio>=2.37.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "monai>=1.3.2",
    "numpy>=2.3.4",
    "opencv-python-headless==4.11.0.86",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "scipy>=1.14",
    "torch==2.3.1",
    "tqdm>=4.67.1",
]
